# Forge1-fb1

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  MCAE_INTEGRATION_COMPLETE.md  Makefile  docker-compose.yml  forge1_client_scenario_analysis.md  requirements-verification.txt
forge1/backend/: .dockerignore  .env.example  COMPLIANCE_IMPLEMENTATION_SUMMARY.md  DEPENDENCY_FIXES.md  Dockerfile  MCAE_INTEGRATION_SUMMARY.md  MEMORY_SYSTEM_IMPLEMENTATION.md  PHASE_G_IMPLEMENTATION_SUMMARY.md  PRODUCTION_READINESS_SUMMARY.md  README.md  TASK_2_IMPLEMENTATION_SUMMARY.md  __init__.py  alembic.ini  pyproject.toml  pytest.ini  requirements-minimal.txt  run_migrations.py  run_tests.py  test_analytics_monitoring.py  test_api_startup.py  test_azure_monitor_integration.py  test_compliance_implementation.py  test_compliance_simple.py  test_core_backend.py  test_employee_lifecycle.py  test_employee_lifecycle_api.py  test_openai_integration.py  test_performance_optimization.py  test_phase_g_implementation.py  test_production_readiness.py  test_security_features.py  test_startup.py  verify_implementation.py  verify_qa_implementation.py  verify_security_compliance.py  verify_superhuman_performance.py
forge1/backend/alembic/: env.py
forge1/backend/alembic/versions/: 0001_create_core_tables.py  0001_initial.py
forge1/backend/deploy/config/: development.yaml  production.yaml  staging.yaml
forge1/backend/docs/: SECURITY_ROTATION.md  api_documentation.md  azure_monitor_integration.md  deployment_guide.md  llamaindex_workflows_integration.md  openapi.yaml  openapi_spec.yaml  troubleshooting_guide.md
forge1/backend/examples/: api_integration_examples.py
forge1/backend/forge1/: __init__.py  main.py  startup.py
forge1/backend/forge1/agents/: __init__.py  agent_factory_enhanced.py  agent_orchestrator.py  communication_manager.py  compliance_agent.py  enhanced_base_agent.py  executor_agent.py  multi_model_coordinator.py  performance_optimizer.py  reporter_agent.py  superhuman_planner.py  verifier_agent.py
forge1/backend/forge1/api/: api_integration_api.py  automation_api.py  azure_monitor_api.py  compliance_api.py  employee_lifecycle_api.py
forge1/backend/forge1/auth/: __init__.py  authentication_manager.py  jwt.py
forge1/backend/forge1/billing/: __init__.py  metering.py  payment_processor.py  pricing_engine.py
forge1/backend/forge1/compliance/: __init__.py  gdpr.py  hipaa.py  manager.py  programs.py  verify_security_compliance.py
forge1/backend/forge1/config/: integration_settings.py
forge1/backend/forge1/core/: adversarial_evaluation.py  agent_base.py  app_kernel.py  audit_logger.py  code_sandbox.py  compliance_engine.py  conflict_resolution.py  connection_pool_manager.py  database_config.py  dlp.py  encryption_manager.py  escalation_manager.py  excellence_manager.py  fallback_modules.py  health_checks.py  logging_config.py  memory_manager.py  memory_models.py  memory_optimizer.py  model_router.py  monitoring.py  orchestration.py  performance_monitor.py  performance_optimizer.py  policy_engine.py  quality_assurance.py  redis_cache_manager.py  secret_manager.py  security.py  security_manager.py  tenancy.py  tool_reliability.py
forge1/backend/forge1/customization/: __init__.py  guardrails.py  manager.py
forge1/backend/forge1/dlp/: presidio_adapter.py
forge1/backend/forge1/integrations/: __init__.py  api_integration_layer.py  autogen_adapter.py  automation_connectors.py  base_adapter.py  crewai_adapter.py  forge1_agent_factory.py  forge1_memory_store.py  forge1_model_client.py  forge1_system_adapter.py  framework_adapter.py  haystack_adapter.py  langchain_adapter.py  llamaindex_adapter.py  llamaindex_model_shim.py  llamaindex_tools.py  mcae_adapter.py  mcae_error_handler.py  mcae_logging.py  mcae_performance_monitor.py  nda_workflow.py  otel_integration.py  system_validator.py  tool_permission_enforcer.py  usage_tracking.py  workflow_context_injector.py  workflow_error_handling.py  workflow_executor.py  workflows_adapter.py
forge1/backend/forge1/marketplace/: __init__.py  models.py  registry.py
forge1/backend/forge1/middleware/: azure_monitor_middleware.py  policy_enforcer.py  security_middleware.py  tenant_context.py
forge1/backend/forge1/models/: __init__.py  employee_models.py  workflow_models.py
forge1/backend/forge1/observability/: __init__.py  otel.py
forge1/backend/forge1/optimization/: __init__.py  capacity_optimizer.py
forge1/backend/forge1/orchestration/: temporal_client.py
forge1/backend/forge1/performance/: __init__.py  phase7_simulation.py  run_phase7.py  verify_performance_profiles.py
forge1/backend/forge1/platform/: __init__.py  manager.py
forge1/backend/forge1/policies/: doc_access.rego  routing_constraints.rego  tool_access.rego
forge1/backend/forge1/policy/: opa_client.py
forge1/backend/forge1/reporting/: __init__.py  readiness.py
forge1/backend/forge1/security/: __init__.py  compliance.py  penetration_testing.py  signature_verification.py  supply_chain.py
forge1/backend/forge1/services/: __init__.py  azure_monitor_service.py  client_manager.py  employee_analytics_service.py  employee_manager.py  employee_memory_manager.py  interaction_processor.py  personality_manager.py
forge1/backend/forge1/support/: __init__.py  support_system.py
forge1/backend/forge1/tests/: __init__.py  test_authentication_manager.py  test_autogen_integration.py  test_compliance_security.py  test_crewai_integration.py  (+17 more)
forge1/backend/migrations/: 0001_add_schema_migrations_table.sql  0002_add_tenant_indexes.sql  0003_create_employee_lifecycle_schema.sql  001_initial_schema.sql  schema_migrations.sql
forge1/backend/scripts/: db_migrate.py  deploy.py  health_check.py  load_test.py  migrate_database.py  run_e2e_validation.py  run_nda_demo.py  setup_demo_environment.py  validate_system.py  verify_compatibility.py
forge1/backend/tests/: README.md  __init__.py  conftest.py  smoke_tests.py  test_api_integration_layer.py  test_automation_connectors.py  test_llamaindex_workflows_integration.py  test_mcae_integration_units.py  test_mcae_law_firm_integration.py
(+287 files in other folders)
